# wasm-snippy

./: LICENSE  README.md  docker-compose.yaml
client/: .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.js  App.tsx  CreateBotModal.tsx  CreateBotPage.tsx  DrawerAppBar.tsx  Editor.css  Editor.tsx  LeaderboardPage.tsx  LiveTournamentPage.tsx  ResponsiveAppBar.tsx  Tournament.css  Tournament.js  Tournament.tsx  UploadWasmModal.tsx  api.ts  index.css  index.js  index.tsx  monacoWorkers.ts
sample-bots/assemblyscript/: README.md  package.json
sample-bots/assemblyscript-example/: asconfig.json  package-lock.json
sample-bots/assemblyscript-example/assembly/: index.ts
sample-bots/paper-bot/: Cargo.toml
sample-bots/paper-bot/src/: lib.rs
sample-bots/random-bot/: Cargo.toml
sample-bots/random-bot/src/: lib.rs
sample-bots/rock-bot/: Cargo.toml
sample-bots/rock-bot/src/: lib.rs
sample-bots/rust-example/: Cargo.toml  README.md
sample-bots/rust-example/src/: main.rs
sample-bots/snippy-bot/: Cargo.toml
sample-bots/snippy-bot/src/: lib.rs
server/: index.ts  local_setup.sql  package.json  run_bots.ts  runno.ts  setup.sql
wasi-runner/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  generate_database_cert.sh  local_setup.sql
wasi-runner/src/: main.rs  tournament.rs
