[package]
name = "wasi-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
dotenvy = "0.15.7"
futures = "0.3.29"
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
headers = "0.3"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasi-common = "14.0.4"
wasmtime = "14.0.4"
wasmtime-wasi = "14.0.4"
